# netatmo-api-rs

./: Cargo.toml  README.md
src/: lib.rs  types.rs  utils.rs
src/types/: home.rs  mod.rs  station.rs
