[package]
name = "netatmo-api-rs"
version = "0.1.0"
authors = ["Adrien Chapelet <adrien3d@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["json"] }
tokio = { version = "0.3.0", features = ["full"] }