[package]
name = "netatmo-api-rs"
version = "0.0.1"
authors = ["Adrien Chapelet <adrien3d@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
tokio = { version = "0.3.0", features = ["full"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_derive = "1.0.117"