[package]
name = "netatmo-api-rs"
version = "0.0.1"
authors = ["Adrien Chapelet <adrien3d@gmail.com>"]
license = "MIT"
description = "Library to consume Netatmo API"
repository = "https://github.com/adrien3d/netatmo-api-rs.git"
documentation = "https://github.com/adrien3d/netatmo-api-rs"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_derive = "1.0.152"